# biobabel

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: .gitignore  requirements.txt
docs/source/: api.rst  biodata.rst  cli.rst  conf.py  index.rst  usage.rst
examples/: Usage.ipynb
paper/: .gitignore  paper.bib  paper.md
src/biobabel/: __init__.py  biodata.py  io.py  load_acq.py  load_bdf.py  load_bramsbiobox.py  load_edf.py  load_genericcsv.py  load_hdphysio5.py  load_lsl.py  load_opensignals.py  load_teensyecg.py  viewer.py
tests/: .gitignore  Usage.ipynb  create_example_hdf5.py  example.hdf5  test_acq.py  test_convert_h5.py  test_guess_modality.py  test_h5.py  test_read_opensignals.py  test_read_xdf.py  test_wrong_extension.py
tests/samples/: SampleECG.txt  biopac_sample_wrong_extension.edf  five_ecgs.xdf
