[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "biobabel"
version = "0.0.1"
authors = [
  { name="Floris van Vugt", email="ftvanvugt@gmail.com" },
]
description = "Python package for reading major bio/physiology data formats (e.g. ECG, PPG, EDA)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "h5py",
]

[project.urls]
"Homepage" = "https://github.com/florisvanvugt/biobabel"


